test/should_pass/annot_002.grg
rule r {
	pattern {
		-x[prio=10000] : Edge->;
	}
	modify {
	}
}

