test/should_fail/annot_002.grg
actions annot_002;

rule r {
	pattern {
		[prio=42] --> .;
	}
	modify {}
}
